--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -5,6 +5,40 @@
   left: 50%;
   transform: translate(-50%, 0);
 
+  .examples {
+    position: absolute;
+    top: -30px;
+
+    .example {
+      cursor: pointer;
+      display: inline-block;
+
+      color: lightgrey;
+      border: 1px solid lightgrey;
+      border-radius: 50%;
+      width: 20px;
+      height: 20px;
+      text-align: center;
+      line-height: 21px;
+      font-size: 12px;
+
+      &.selected {
+        color: white;
+        background-color: lightgrey;
+      }
+
+      &:hover {
+        border-color: steelblue;
+        color: white;
+        background-color: steelblue;
+      }
+
+      &:not(:first-child) {
+        margin-left: 4px;
+      }
+    }
+  }
+
   .info {
     position: absolute;
     top: 3px;
