--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -71,6 +71,10 @@
     align-items: center;
     user-select: none;
 
+    .time-changer {
+      width: 100%;
+    }
+
     .spacer {
       flex: 1;
     }
